Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
-Stoner
-American Pastoral
-The Corrections
-Affliction
-House of Sand and Fog
+<li>Stoner</li>
+<li>American Pastoral</li>
+<li>The Corrections</li>
+<li>Affliction</li>
+<li>House of Sand and Fog</li>
